fixed Modal's overflow bg color in light themes;

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -14,7 +14,7 @@
   height: 100vh;
   margin: auto;
 
-  background: rgba(#000, 0.9);
+  background: var(--overflow);
 
   &.isOpen {
     display: block;
