--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -88,5 +88,6 @@
   --secondary: #828282;
   --hover: #9a9a9a;
   --bg: #111;
+  --overflow: #000d; // hex with opacity
   --text-shadow-for-hover: #ffffff7f;
 }
